# monitor-advanced

./: .dockerignore  .env.example  .gitattributes  .gitignore  AI_ML_DASHBOARD_README.md  DASHBOARDS.md  DASHBOARD_FIXED_README.md  FEATURES_SUMMARY.md  INFLUXDB_CONFIGURATION.md  INFLUXDB_SETUP_GUIDE.md  INSTALLATION.md  LICENSE  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  README.md  README_DESKTOP.md  SECURITY.md  SETUP_INSTRUCTIONS.md  ULTIMATE_INFLUXDB_CAPABILITIES.md  ULTIMATE_PROFESSIONAL_DASHBOARD_README.md  YOUR_SYSTEM_STATUS.md  docker-compose.desktop.yml  docker-compose.monitoring.yml  docker-compose.raspberry-pi.yml  docker-compose.yml  economic_indicators_fixed.sql  install-pi.sh  install_project.bat  install_project.ps1  pyproject.toml  reload-dashboards.bat  reload-dashboards.sh  requirements-ci.txt  requirements.desktop.txt  requirements.txt  setup.py  setup_influxdb_simple.py  test_celery.py  test_setup.py
.claude/: settings.local.json
.github/workflows/: ci-cd-pipeline.yml  iot-testing.yml
azure/appservice/: startup.txt  web.config
config/: config.desktop.yaml  config.example.yaml  config.yaml  config.yaml.save
docker/: Dockerfile  Dockerfile.desktop
docker/nginx/: nginx.desktop.conf  nginx.raspberry.conf
docker/postgres/: init.sql  init_hft_upgraded.sql  postgresql.desktop.conf
docker/redis/: redis.desktop.conf
docs/: ALERT_SYSTEM.md  ANALYTICS_ENGINE.md  API_DOCUMENTATION.md  DASHBOARD.md  DESKTOP_SETUP.md  IMPLEMENTATION_PLAN.md  INFLUXDB_GRAFANA_QUERIES.md  INFLUXDB_SETUP.md  NEW_FEATURES.md  PORTFOLIO_MANAGEMENT.md  POSTGRESQL_GRAFANA_QUERIES.md
examples/: alert_example.py  analytics_demo.py  dashboard_example.py  portfolio_example.py  risk_analytics_demo.py
grafana/dashboards/: COMPREHENSIVE_DASHBOARD_README.md  README.md  ULTIMATE_DASHBOARD_README.md  comprehensive-financial-dashboard.json  comprehensive_financial_dashboard.json  macro_economic_dashboard.json  portfolio-dashboard.json  stock-monitor-overview.json  system-performance.json
grafana/datasources/: prometheus.yml
monitoring/: alert_rules.yml  alertmanager.yml  blackbox.yml  prometheus.yml  start_monitoring.sh
prometheus/: prometheus.desktop.yml  prometheus.yml
prometheus/alerts/: stock_monitor_alerts.yml
prometheus/rules/: stock_monitor_rules.yml
scripts/: add_missing_indicators.py  add_remaining_panels.json  ai_ml_data_pipeline.py  check_energy_data.py  check_influxdb_data.py  collect_real_macro_data.py  create_clean_dashboard.py  create_finalized_dashboard.py  create_macro_bucket.py  create_shortcuts.py  create_tier2_tier3_data.py  create_ultra_clean_dashboard.py  deploy_azure.py  diagnose_data.py  fix_dashboard_data.py  fix_finalized_dashboard.py  fix_influxdb_auth.bat  fix_influxdb_auth.sh  get_influx_token.py  grafana_performance_optimization.json  high_frequency_sample_data.json  import_macro_dashboard.py  init_db.py  install_desktop.ps1  install_linux.sh  install_macos.sh  install_windows.bat  launch_macro_dashboard.bat  manual_bucket_creation.txt  populate_comprehensive_historical_data.py  populate_macro_data.bat  populate_macro_data.ps1  populate_macro_data.py  populate_macro_data.sh  populate_macro_data_bash.sh  populate_macro_data_debug.ps1  populate_macro_data_final.bat  populate_macro_data_fixed.bat  populate_macro_data_simple.bat  populate_macro_data_simple.py  (+29 more)
scripts/dashboards/: add_missing_indicators.py  create_clean_dashboard.py  create_complete_dashboard.py  create_ultra_clean_dashboard.py  fix_dashboard_data.py  launch_macro_dashboard.bat  restart_grafana.bat  restart_grafana.sh  start_comprehensive_dashboard.bat  start_comprehensive_dashboard.sh  verify_dashboard.sh  verify_dashboard_setup.bat  verify_dashboard_setup.sh
scripts/data/: collect_real_macro_data.py  create_tier2_tier3_data.py  populate_comprehensive_historical_data.py  populate_comprehensive_macro_data.bat  populate_comprehensive_macro_data.py  populate_macro_data.bat  populate_macro_data.ps1  populate_macro_data.py  populate_macro_data.sh  populate_macro_data_bash.sh  populate_more_data.py  (+3 more)
src/: __init__.py  celery_app.py  celery_config.py  data_populator.py  main.py
src/iot/: config.py  (+1 more)
stock_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_alert_manager.py  test_analytics_engine.py  test_portfolio_manager.py
(+112 files in other folders)
